--- a/index.html
+++ b/index.html
@@ -73,5 +73,6 @@
     <footer>
         <p>&copy; 2024 Janeysha Mann. Todos los derechos reservados.</p> 
     </footer>
+    <link rel="stylesheet" href="estilos.css">
 </body>
 </html>
